--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
       <div class="row section1">
         <div class="span12">
-          Marketing Section 1
+          Marketing Section 1 - change
         </div>
       </div>
       <div class="row section2">
